--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,33 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.cell-input {
+  width: 3vw;
+  height: 3vw;
+  font-size: 2.3vw;
+  font-weight: bold;
+  padding: 0.3vw;
+  text-transform: uppercase;
+  margin: 0.2vw;
+  border-radius: 0.5vw;
+  background-color: transparent;
+  border: 0.1vw solid white;
+  font-family: Arial, sans-serif;
+  box-sizing: border-box;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  caret-color: transparent;
 }
 
-.card {
-  padding: 2em;
+.cell-input:focus {
+  border: 0.2vw solid rgb(49, 173, 255);
+  outline: none;
 }
 
-.read-the-docs {
-  color: #888;
+.row-form {
+  display: flex;
+  flex-direction: row;
 }
