--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,16 @@
   display: flex;
   flex-direction: row;
 }
+
+.message {
+  position: fixed;
+  top: 2vw;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 2vw;
+  z-index: 10;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
