feat: add the explication page

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,115 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
 }
 
+/* How To Play */
+.container {
+  width: 41% !important;
+  padding: 0 !important;
+  margin: 2vw 0;
+}
+
+.header {
+  font-size: 1vw !important;
+  color: oklch(55.6% 0 0) !important;
+  text-transform: uppercase !important;
+  font-weight: 700 !important;
+  margin-bottom: 2vw !important;
+}
+
+.cells-container {
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  gap: 0.3vw !important;
+  box-sizing: border-box !important;
+  justify-content: center !important;
+}
+
+.cell {
+  color: white !important;
+  font-weight: bold !important;
+  text-transform: uppercase !important;
+  border-radius: 0.5vw !important;
+  user-select: none !important;
+  cursor: default !important;
+  font-size: 2vw !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.title-element {
+  width: 3vw !important;
+  height: 3vw !important;
+}
+
+.correct {
+  background-color: #43a047 !important;
+}
+
+.in-the-word {
+  background-color: #e4a81d !important;
+}
+
+.incorrect {
+  background-color: #757575 !important;
+}
+
+.paragraph {
+  width: 100% !important;
+  margin: 1vw 0 !important;
+  font-size: 1.07vw !important;
+  text-align: start;
+  color: white !important;
+}
+
+.colors {
+  display: flex;
+  padding: 1vw 1.4vw !important;
+  align-items: center !important;
+  gap: 2.4vw !important;
+}
+
+.colors-element {
+  width: 6vw !important;
+  height: 5vw !important;
+}
+
+.sub-title {
+  font-size: 1.5vw !important;
+  font-weight: bold !important;
+}
+
+.example-element {
+  width: 4vw !important;
+  height: 4vw !important;
+}
+
+.transparent {
+  border-width: 0.2vw !important;
+  border-style: solid !important;
+  border-color: rgb(66, 66, 66) !important;
+}
+
+.play {
+  width: 20vw !important;
+  height: 5vw !important;
+  font-weight: bold !important;
+  background-color: #43a047 !important;
+  text-transform: uppercase !important;
+}
+
 .cell-input {
-  width: 3vw;
-  height: 3vw;
+  width: 5vw;
+  height: 5vw;
   font-size: 2.3vw;
   font-weight: bold;
   padding: 0.3vw;
