--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,19 @@
   width: 41% !important;
   padding: 0 !important;
   margin: 2vw 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
+  width: 7vw !important;
   font-size: 1vw !important;
   color: oklch(55.6% 0 0) !important;
   text-transform: uppercase !important;
   font-weight: 700 !important;
   margin-bottom: 2vw !important;
+  cursor: pointer;
 }
 
 .cells-container {
