--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,12 @@
   color: oklch(55.6% 0 0) !important;
   text-transform: uppercase !important;
   font-weight: 700 !important;
-  margin-bottom: 2vw !important;
+  margin-bottom: 1vw !important;
   cursor: pointer;
 }
 
 .cells-container {
+  width: auto !important;
   display: flex !important;
   flex-direction: row !important;
   align-items: center !important;
@@ -91,6 +92,8 @@
 .sub-title {
   font-size: 1.5vw !important;
   font-weight: bold !important;
+  margin: 0.5vw;
+  margin-top: 2vw;
 }
 
 .example-element {
@@ -112,6 +115,15 @@
   text-transform: uppercase !important;
 }
 
+
+/* Tabla juego */
+.table {
+  margin: 2vw 0 !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cell-input {
   width: 5vw;
   height: 5vw;
@@ -131,6 +143,8 @@
   text-align: center;
   cursor: pointer;
   caret-color: transparent;
+  user-select: none !important;
+  color: white !important;
 }
 
 .cell-input:focus {
